Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.3, 4.8.5, 5.2.0 Beta1
-
None
-
Windows, Linux
-
9b556afc5a2507077dff54c18a2b19c7df3c4575
Description
If the mnemonic word begans with the character'f' then it won't be always underlined. This is depending of the font and the character after 'f'. For example, if using the font Calibri and the word is '&file' then it can be reproduced but if the word is '&foo' then it cannot be reproduced. Also, this is depending of the used OS. Depending of the second character it sometimes underlines the character 'f' in Linux but not in Windows.
The error cannot be reproduced if using capital 'F'. The error cannot be reproduced with Times New Roman/Arial.
I attached two screenshots of the issue and an application to reproduce the issue.
Attachments
Issue Links
- resulted in
-
QTBUG-41593 [Reg 5.3->5.4] Entries with Mnemonics in main menus are too wide
-
- Closed
-
For Gerrit Dashboard: QTBUG-20960 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
8353,1 | Return a string from resolvedUrl() to match 4.x behavior | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |
94994,2 | Fix menu mnemonic inside ligatures | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |